# clipd

./: .gitignore  Cargo.toml  README.md
Formula/: clipd.rb
clipd-cli/: Cargo.toml
clipd-cli/src/: main.rs
clipd-core/: Cargo.toml
clipd-core/src/: clipboard.rs  lib.rs
scripts/: build.sh
src/: config.rs  daemon.rs  main.rs  models.rs  store.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
ui/: index.html  main.js  style.css
