[package]
name = "clipd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for clipd clipboard history daemon"

[lib]
name = "clipd_core"
path = "src/lib.rs"

[dependencies]
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
dirs = "5"
anyhow = "1"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
