[package]
name = "clipd-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "clipd macOS app — menu bar clipboard history with global hotkey"

[[bin]]
name = "clipd-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clipd-core = { path = "../clipd-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
# objc crate for NSApplication LSUIElement (no Dock icon)
objc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = false  # Tauri needs symbols for macOS code signing
panic = "abort"
